test/functions/resolution/errors/testBadCallCandidates.5.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:88: error: unresolved call 'owned D.bar("hi")'
testBadCallCandidates.chpl:8: note: this candidate did not match: C.bar(x: string)
testBadCallCandidates.chpl:88: note: because method call receiver with type 'owned D'
testBadCallCandidates.chpl:4: note: is passed to formal 'this: borrowed C'
testBadCallCandidates.chpl:88: note: other candidates are:
testBadCallCandidates.chpl:11: note:   C.bar(x: D)
testBadCallCandidates.chpl:36: note:   D.bar(x: int)
note: and 1 other candidate, use --print-all-candidates to see it
